<resources>
    <string name="title_activity_second">Second Activity</string>
    <string name="toast_track_exception">Exception is recorded. Check the Crashes and Exceptions on Google Dashboard!</string>
    <string name="toast_app_crash">The app will crash now! Check the Crashes and Exceptions on Google Dashboard!</string>
    <string name="fragment_footer">Fragment is loaded! Check the screen view on Google Analytics Dashboard.</string>
    <string name="msg_instructions">Click on each button to see the appropriate tracking on Google Analytics</string>
    <string name="btn_second_screen">Second Screen</string>
    <string name="btn_send_event">Track Event</string>
    <string name="btn_exception_tracking">Track Exception</string>
    <string name="btn_app_crash">Track App Crash</string>
    <string name="btn_load_fragment">Fragment Tracking</string>
    <string name="app_name">PINOCopy</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">یکسان سازی</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="click_image">Click Image</string>
    <string name="search">Search</string>
    <string name="from_gallery">From Gallery</string>
    <string name="image_content">Image</string>
    <string name="send">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="label_menu_logo"> لوگو</string>
    <string name="label_menu_version"> ورژن نصب شده</string>
    <string name="label_menu_sync"> آخرین بروزرسانی</string>
    <string name="label_menu_syncToast">  بروزرسانی انجام شد</string>
    <string name="label_menu_home">خانه</string>
    <string name="label_menu_setting">تنظیمات </string>
    <string name="label_menu_notification">پیام ها</string>
    <string name="label_menu_ETnotification">نوشتن پیام </string>
    <string name="label_menu_report">گزارشات</string>
    <string name="label_menu_line">خط</string>
    <string name="label_menu_form">فرم ها</string>
    <string name="label_menu_car">خودرو</string>
    <string name="label_menu_driver">راننده</string>
    <string name="label_menu_about">درباره ما</string>
    <string name="label_menu_notify">نوتیفیکیشن</string>
    <string name="label_menu_exit">خروج از حساب کاربری</string>
    <string name="label_menu_floatingActionButton">منو</string>
    <string name="label_menu_floatingActionButtonMap">نقشه</string>
    <string name="label_menu_floatingActionButtonAdd">افزودن</string>
    <string name="checkList">چک لیست بازدید</string>
    <string name="label_menu_exit_alert">آیا مایلید از برنامه خارج شوید؟</string>
    <string name="graph">نمودار</string>
    <string name="label_home_driver">راننده</string>
    <string name="label_home_car">خودرو</string>
    <string name="label_home_form">فرم ها</string>
    <string name="label_home_report">گزارشات</string>
    <string name="label_home_line">خط</string>
    <string name="label_home_advert">تبلیغات</string>
    <string name="label_home_message">پیام ها</string>
    <string name="label_home_checkList">چک لیست ها</string>
    <string name="label_home_chart">مدیریت ناوگان</string>
    <string name="label_timeFrom">از ساعت </string>
    <string name="label_timeTo">تا ساعت </string>
    <string name="label_get_car_fuel_TextView">شماره پلاک 7 رقمی خودرو را وارد کنید</string>
    <string name="label_get_car_fuel_movedKm">کیلومتر طی شده : </string>
    <string name="label_get_car_fuel_intParam2">مقدار سوختگیری مجاز(لیتر/بار):</string>
    <string name="label_get_car_fuel_remainedFullValueFV">مانده سوخت پیش بینی شده : </string>
    <string name="label_get_car_fuel_parameter1">کیلومتر طی شده در خط : </string>
    <string name="label_get_car_fuel_nameFvBefore"> سوخت گیری : </string>
    <string name="label_get_car_fuel_SearchButton">جستجو</string>
    <string name="label_get_car_fuel_textTitle">گزارش سوخت/جستجو بر اساس پلاک خودرو</string>
    <string name="label_reportDetail_send">ارسال شده است </string>
    <string name="label_reportDetail_notSend">ارسال نشده است </string>
    <string name="label_progress_dialog">لطفا منتظر بمانید...</string>
    <string name="label_setlect_option">یکی از موارد زیر را انتخاب کنید...</string>
    <string name="label_toolbar_driver">کد راننده را وارد کنید</string>
    <string name="label_activitySetting_title">تعریف مجدد گذرواژه BIS </string>
    <string name="label_activitySetting_autoLogin"> فعال کردن autoLogin </string>
    <string name="label_activitySetting_userName">آیا مایلید از برنامه خارج شوید؟</string>
    <string name="label_activitySetting_password">آیا مایلید از برنامه خارج شوید؟</string>
    <string name="label_ChatGroupAdapter_sendFile">sendingFile</string>
    <string name="label_optionButton_daily">روزانه</string>
    <string name="label_optionButton_monthly">ماهانه</string>
    <string name="label_optionButton_periodic">دوره ای</string>
    <string name="label_optionButton_multiMonth"> مدت دار</string>
    <string name="label_spinner_prevYear"> ماه گذشته </string>
    <string name="label_spinner_prevDay"> روز  </string>
    <string name="label_fromDate">از تاریخ</string>
    <string name="label_toDate">تا تاریخ</string>
    <string name="label_date"> تاریخ :</string>
    <string name="label_durationCredit">مانده اعتبار</string>
    <string name="notification_channel_id">notification_channel_id</string>
    <string name="label_report_opDriver">راننده</string>
    <string name="label_report_opCar">خودرو</string>
    <string name="label_report_opLine">خط</string>
    <string name="label_report_opOthers">سایر</string>
    <string name="label_check_network">اتصال خود را با اینترنت بررسی کنید</string>
    <string name="label_report_plateText_IR">ایران</string>
    <string name="label_report_plateText_Temporary">موقت</string>
    <string name="label_report_enterCode_driver">کد راننده را وارد کنید:</string>
    <string name="label_report_enterCode_line">کد خط را وارد کنید:</string>
    <string name="label_report_enterCode_car">کد خودرو را وارد کنید:</string>
    <string name="txt_car">خودرو</string>
    <string name="label_dialog_detail">جزییات</string>
    <string name="incidentedate">تاریخ حادثه </string>
    <string name="label_reportList_name">نام  </string>
    <string name="label_reportList_reportDate"> تاریخ گزارش </string>
    <string name="label_reportList_report">گزارش</string>
    <string name="label_reportList_reportCode1">کد گزارش</string>
    <string name="label_report_sendMsg">گزارش ارسال شد </string>
    <string name="error_location_permission">مجوز برای دریافت موقعیت فعلی شما لازم است.</string>
    <string name="error_location_null">موقعیت مکانی فعال نمی باشد</string>
    <string name="label_reportDetail_entityNameEn">راننده :</string>
    <string name="label_reportList_reportCode">کد گزارش :</string>
    <string name="label_reportList_reportStr"> گزارش :</string>
    <string name="label_reportList_reportDate1"> تاریخ ثبت :</string>
    <string name="label_reportList_deliverIs">وضعیت :</string>
    <string name="label_reportList_deliverDate">تاریخ ارسال :</string>
    <string name="label_reportList_title">گزارش بازرسی</string>
    <string name="label_notification_groupName">نام گروه :</string>
    <string name="label_reportDetail_entityNameEn_driver"> راننده :</string>
    <string name="label_reportDetail_entityNameEn_line"> خط :</string>
    <string name="label_reportDetail_entityNameEn_car">خودرو :</string>
    <string name="label_fullAttach_checkList">امکان افزودن تصویر وجود ندارد</string>
    <string name="label_reportStrTv_NotNull">اطلاعات را کامل وارد کنید</string>
    <string name="label_inputGetDriverInfo_plateText_NotNull">پلاک خودرو را 5 یا 7 رقم وارد کنید</string>
    <string name="label_inputGetDriverInfo_propertyCode_NotNull">کد خودرو را وارد کنید</string>
    <string name="label_reportStrTv_reportCode">کد تخلف را وارد کنید (اختیاری)</string>
    <string name="label_reportStrTv_reportStr">متن گزارش را وارد کنید (اجباری)</string>
    <string name="label_reportStrTv_sendReport">ارسال</string>
    <string name="label_reportStrTv_titleReport">ثبت گزارش</string>
    <string name="label_person_name">نام   </string>
    <string name="label_person_family">نام خانوادگی:</string>
    <string name="label_person_ageFV">سن</string>
    <string name="label_driverCode_val1">کد پرسنلی:</string>
    <string name="label_driverCode_val2">کد پرسنلی</string>
    <string name="label_drivingLicence_licenceNo"> گواهینامه</string>
    <string name="label_drivingLicence_licGroupEn">نوع گواهینامه":</string>
    <string name="label_drivingLicence_expireDate">مانده اعتبار</string>
    <string name="label_address_mobileNo">شماره موبایل </string>
    <string name="label_address_company">شعبه بهره بردار </string>
    <string name="label_carOption_generalEnum">نوع اشتغال : </string>
    <string name="label_carOption_driverTypeEn"> نوع حکم :</string>
    <string name="label_carOption_optionNo">شماره حکم : </string>
    <string name="label_carOption_dateConfirm"> تاریخ حکم :</string>
    <string name="label_carOption_startDate">تاریخ شروع : </string>
    <string name="label_carOption_expireDate">تاریخ پایان : </string>
    <string name="label_licence_licenceNo">شماره پروانه:</string>
    <string name="label_licence_driveLicenceTypeEn">نوع پروانه:</string>
    <string name="label_licence_hejriStartDate">تاریخ اعتبار از:</string>
    <string name="label_licence_hejriExpireDate">تاریخ اعتبار تا:</string>
    <string name="label_driverJobList_counter">تعداد نتایج جستجو :</string>
    <string name="label_SettingActivity_BiSPass">گذرواژه سامانه  خود را وارد کنید</string>
    <string name="label_SettingActivity_changePassword"> انجام شد </string>
    <string name="label_LoginFragment_Pass">گذرواژه محلی خود را وارد کنید </string>
    <string name="label_PassCreationFragment">تعریف گذرواژه محلی</string>
    <string name="label_PassCreationFragment1"> گذرواژه محلی را مجدد تعریف کنید </string>
    <string name="label_PassCreation_userName">نام کاربری</string>
    <string name="label_PassCreation_password">رمز عبور</string>
    <string name="label_ActivationFragment_phoneNumber">شماره خود را وارد کنید</string>
    <string name="label_ActivationFragment_code">کد را وارد کنید</string>
    <string name="label_login_toast">نام کاربری یا رمز عبور اشتباه است</string>
    <string name="label_exit_toast">برای خروج یکبار دیگر دکمه بازگشت را فشار دهید</string>
    <string name="label_option_text">لطفا یکی از موارد زیر را انتخاب کنید:</string>
    <string name="label_option_plateText">نوع پلاک :</string>
    <string name="label_option_plateTextTemporary">پلاک :</string>
    <string name="label_driverJobList_type_list">نوع اتوبوسران</string>
    <string name="label_driverJobList_driverJobTypeEn_list">نوع شغل</string>
    <string name="label_driverJobList_Line_list">خط</string>
    <string name="label_car_plateText_list">خودرو</string>
    <string name="label_violationBase_code">کد تخلف </string>
    <string name="label_violationBaseAction_actionText">شرح اقدام </string>
    <string name="label_violation_watchingDate"> زمان وقوع</string>
    <string name="label_complaintList_requestType"> نوع درخواست</string>
    <string name="label_complaintList_requestDate"> تاریخ درخواست</string>
    <string name="label_complaintList_requestDescription"> شرح درخواست</string>
    <string name="label_incidentType"> نوع حادثه</string>
    <string name="label_incidentDamageType">نوع خسارت </string>
    <string name="label_incidentDate">تاریخ حادثه </string>
    <string name="vioCode_label">کد تخلف :  </string>
    <string name="vioName_label">نام تخلف :  </string>
    <string name="watchingdate_label">زمان وقوع :  </string>
    <string name="time_label">  مرتبه وقوع :</string>
    <string name="actiontext_label">شرح اقدام :  </string>
    <string name="locateType_label">محل :  </string>
    <string name="locateName_label"> نام محل : </string>
    <string name="tab_line_title_incident">حوادث-خط</string>
</resources>