<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bgColor"
    tools:context=".activity.driver.DriverViolationDetailActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/toolbarDriver">

        <com.gap.pino_copy.util.CustomTextView
            android:text="@string/label_dialog_detail"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@mipmap/close" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/code_TV"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <com.gap.pino_copy.util.CustomTextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="left"
                    android:text="@string/vioCode_label"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/name_TV"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/statistical_TV"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="left"
                    android:text="@string/vioName_label"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">


                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/watchingDate_TV"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/txt_two"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="left"
                    android:text="@string/watchingdate_label"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/time_TV"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/txt_three"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="left"
                    android:text="@string/time_label"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/locateType_TV"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/txt_four"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="left"
                    android:text="@string/locateType_label"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/locateName_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:text="-----"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/locateName_TVLabel"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="left"
                    android:text="@string/locateName_label"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal">

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/actionText_TV"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="right"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <com.gap.pino_copy.util.CustomTextView
                    android:id="@+id/txt_five"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="left"
                    android:text="@string/actiontext_label"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
